Made Code Performant + Cleanup